# Kumiko

./: .config.dist.yml  .deepsource.toml  .dockerignore  .env-dev-example  .env-docker-example  .env.dist  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yaml  .replit  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  Vagrantfile  changelog.md  codecov.yml  configuration.json  contributing.md  cum.txt  docker-compose-dev.yml  docker-compose-example.yml  docker-compose-staging.yml  docker-compose.yml  dockerfile  lefthook.yml  main.py  migrations-runner.py  mise.toml  noxfile.py  pyproject.toml  rename-tool.sh  (+8 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/issue_template/: task.yml
.github/workflows/: auto-approve.yml  checkmarx-analysis.yml  codeql-analysis.yml  codeql.yml  dependabot-auto-merge.yml  docker-build-ghcr-alpine.yml  docker-build-ghcr-debian.yml  docker-build-ghcr.yml  docker-build-hub-alpine.yml  docker-build-hub-debian.yml  docker-build-hub.yml  docker-build.yml  docker.yml  flake8+black.yml  format.yml  lint+format.yml  lint.yml  pytest.yml  release.yml  snyk.yml  tag.yml  tests.yml  tests.yml.inactive
Alpine-Docker/: Dockerfile  start.sh
Anible-Playbooks/: playbook.yml  postgres.yml
Arch-Docker/: Dockerfile
Bot/: .env.dev-example  .env.example  events_log.py  genshin-ws-test.py  kumikobot.py  kumikocore.py  migrations.py  redis_cache.py  rinbot.py
Bot/Cogs/: Rin.py  __init__.py  actions.py  admin.py  advice.py  ah-checker.py  anilist.py  antiping.py  auction_house.py  auctions.py  avatar.py  ban.py  blacklist.py  bonk.py  (+107 more)
Bot/Cogs-Old/: ipc.py
Cogs/: onCommandError.py  ping.py  rin.py
Community/: CODE_OF_CONDUCT.md  contributing.md  database-setup.md  getting-discord-bot.md  getting-started-guide.md  getting-started-rin.md  getting-started.md  installing-requirements.md
Debian-Docker/: Dockerfile  start.sh
Docker/: Dockerfile  start.sh
Docs/: api-keys.md  database-setup.md  dev-prerequisites.md  dev-setup.md  getting-dev-discord-bot.md
Envs/: dev.env  docker.env  prod.env
Help-Data/: rin_help.sql
Kumiko-Docs/: requirements.txt
Migrations/: 20230612_initial_up_rev1.sql  20230702_rev1_up_rev2.sql  20230702_rev2_up_rev3.sql  20230713_rev3_up_rev4.sql  20230716_rev4_up_rev5.sql  20230718_rev5_up_rev6.sql  20230723_rev6_up_rev7.sql  20230724_rev7_up_rev8.sql  20230726_rev8_up_rev9.sql  20230801_rev9_up_rev10.sql  20230803_rev10_up_rev11.sql  20230909_rev15_up_rev16.sql  20230929_rev16_up_rev17.sql  20230929_rev17_up_rev18.sql
Patches/: 0001-Adjust-Globalrank-to-only-return-10-users-Bump-Versi.patch  0001-Finish-Completely-Reworking-DA-Cog.patch  0001-Format-All-Cogs.patch  0001-rename-some-classes.patch  0002-Add-Modrinth-API-Support.patch  0002-Add-Tenor-API-Support.patch  0002-Upgrade-Docker-Image-to-Python-3.10.2.patch  0003-Fix-Duplicate-Fields-for-Modrinth-Cog.patch  0003-Somewhat-Finish-MD-Cog-Still-need-to-work-on-the-MD-.patch  0003-pip-deps-Bump-sqlalchemy-from-1.4.30-to-1.4.31.patch  0004-Format+Make-Reddit-Cog-Async.patch  0004-Update-Re-Format-RinHelp.patch  0004-skip-ci-Update-Readme.patch  0005-Add-More-Commands-to-Reddit-Cog.patch  0005-Move-DA-Token-Refresher-to-Separate-Container.patch  0005-Require-Disquest-to-be-Async.patch  0006-Format-All-Cogs.patch  0006-Update-RinHelp-with-Reddit-Cmds.patch  0007-Finish-OpenAI-GPT-3-API-Support.patch  0007-Use-AIOHTTP-Streams-API-Instead-of-JSON-Response-Dat.patch  0008-Add-Discord-Bots-API-Support.patch  0008-Break-Up-Author-and-Others-into-Separate-Fields.patch  0009-Add-FIRST-Events-API-Support.patch  0009-Migrate-from-Pycord-v1.7.3-to-v2.0.0b3.patch  0010-Dynamically-Load-All-Data-for-Topgg-Jikan-Cog.patch  0010-Finalize-Help-Cogs-Bump-Rin-s-Version-to-v2.0.0-rc1.patch  0011-Dynamically-Load-All-Data-Instead-of-Statically.patch  0011-Use-Different-PostgreSQL-DB-For-DeviantArt-Cog.patch  0012-Double-Check-Everything-Bump-Version-to-v2.0.0.patch  0012-Dynamically-All-Data-For-Twitter-Cog.patch  0013-Remove-Guild-IDs-For-All-Slash-Commands.patch  0014-Activate-All-Commands-for-Prod-Use.patch  0015-Add-Preliminary-Support-for-Blue-Alliance.patch  0016-Fix-First-FRC-Events-API-Commands-Being-Broken.patch  0017-Clean-up-some-code.patch  0018-Swap-to-SIMDJSON-for-Large-Content-Parsing.patch  0019-Work-on-Blue-Allaince-API-Support.patch  Basically-Completely-Rework-Jisho-Cog.patch  Dynamically-Load-All-Data-for-Tenor-Cog.patch  Finish-Spiget-Cog-Using-Recursion.patch  (+9 more)
Postgres-Docker/: Dockerfile  init.sh  ws-data-init.sh
Requirements/: dev.txt  prod.txt
Ubuntu-Docker/: .dockerignore  Dockerfile
WS-Data/: ws_data.csv  ws_data.sql
bot/: kumiko.py  kumikobot.py  kumikocore.py  launcher.py  migrations.py  rin-bot.py
changelog.d/: +d4a40c53.feature.md  562.feature.md
changelogs/: 559.bugfix.md  561.feature.md  562.feature.md  565.misc.md
changes/: 554.feature.md  557.misc.md  563.feature.md  565.breaking.md  573.misc.md  576.misc.md  582.breaking.md  584.bugfix.md  594-1.misc.md  594-2.misc.md  594-3.misc.md  594.breaking.md  594.feature.md  594.misc.md  596.feature.md  597.bugfix.md  608.misc.md
deploy/: kumiko.service
docker/: .env.example  .env.template  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  example.env  prometheus.yml  start.sh
docs/: Makefile  conf.py  index.rst  requirements.txt
envs/: dev.env  docker.env
migrations/: 20230702_rev1_up_rev2.sql  20230801_rev9_up_rev10.sql  20230815_rev12_up_rev13.sql  20230817_rev13_up_rev14.sql  20231110_rev19_up_rev20.sql
old/: events_log.py
old_code/: config.py  dev_tools.py  webhooks.py
requirements/: dev.txt  docs.txt  tests.txt
scripts/: genshin-ws-init.py  init-db-dev.py  init-db.py  postgres-init-v2.py  postgres-init.py  seeder-v2.py  seeder.py  setup.sh  standalone-setup.sh  vagrant-dev-provision.sh
src/: core.py  main.py  schema.sql
(+626 files in other folders)
