[project]
name = "kumiko"
version = "1.0.0"
description = "A multipurpose Discord bot built with freedom and choice in mind"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12,<4.0"
dependencies = [
    "async-lru~=2.3.0",
    "asyncpg~=0.31.0",
    "discord-ext-menus",
    "discord-py[speed,voice]~=2.7.1",
    "jishaku~=2.7.5",
    "msgspec~=0.21.1",
    "prometheus-async~=26.1.0",
    "prometheus-client~=0.25.0",
    "psutil~=7.2.2",
    "pygit2~=1.19.1",
    "python-dateutil~=2.9.0.post0",
    "pyyaml~=6.0.3",
    "typing-extensions~=4.15.0 ; python_full_version < '3.11'",
    "uvloop~=0.22.1 ; sys_platform != 'win32'",
    "watchfiles~=1.1.1",
    "winloop~=0.6.3 ; sys_platform == 'win32'",
    "zstandard~=0.25.0",
]

[tool.uv.sources]
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus", rev = "8686b5d1bbc1d3c862292eb436ab630d6e9c9b53" }

[dependency-groups]
dev = [
    "towncrier~=25.8.0",
    { include-group = "lint" },
    { include-group = "docs" }
]

lint = [
    "pyright[nodejs]~=1.1.409",
    "ruff~=0.15.12",
]
docs = [
    "furo~=2025.12.19",
    "sphinx~=9.1.0",
    "sphinx-autobuild~=2025.8.25",
    "sphinx-copybutton~=0.5.2",
    "sphinx-design~=0.7.0",
    "sphinxext-opengraph[social-cards]~=0.13.0",
]


[tool.towncrier]
directory = "changes"
filename = "changelog.md"
start_string = "<!-- towncrier release notes start -->"
underlines = ["", "", ""]
title_format = "## Kumiko [{version}](https://github.com/No767/Kumiko/tree/{version}) - {project_date}"
issue_format = "#{issue}"
package = "src.cogs"

  [[tool.towncrier.section]]
    path = ""

  [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bug fixes"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "deprecation"
    name = "Deprecations (removal in next major release)"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "breaking"
    name = "Removals and backward incompatible breaking changes"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "doc"
    name = "Improved documentation"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "misc"
    name = "Miscellaneous internal changes"
    showcontent = true

[tool.pyright]
include = [
    "src"
]
exclude = [
    "**/node_modules",
    "**/.*",
    "**/__pycache__",
    ".venv",
    "docs"
]
reportMissingImports = "error"
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = "warning"
reportFunctionMemberAccess = "none"
reportCallIssue = "none"
reportArgumentType = "none"

[tool.ruff]
line-length = 88
extend-include = [
    "src"
]
extend-exclude = [
    "**/__pycache__",
    ".venv",
    "docs"
]

[tool.ruff.lint]
# Pulled from https://github.com/mikeshardmind/async-utils/blob/main/pyproject.toml#L149
select = [
    "A", "ANN", "ASYNC", "B", "BLE", "C4", "COM", "DTZ", "E",
    "EM", "ERA", "F", "FA", "FBT", "FLY", "FURB", "G", "I", "ICN", "ISC", "LOG", "NPY",
    "PD", "PERF", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PTH", "PYI",
    "Q", "Q003", "RET", "RSE", "RUF", "S", "SIM", "SLOT", "T20", "TC", "TID",
    "TRY", "UP", "W", "YTT"
]
ignore = [
    "B904",     # Niche standard
    "E501",     # Ruff suggested format
    "FBT003",   # Inherently incorrect to enforce this 
    "PGH003",   # I'm too lazy - Will be removed when migrating over to ty
    "PLR2004",  # Magic numbers are fine sometimes
    "SIM105",   # Prefer not to use due to stylistic choices
    "UP045",    # Explicitly use typing.Optional to not confuse between union operators with discord.py

    # These are recommended by Ruff if the formatter is to be used: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002"
]
fixable = ["ALL"]
unfixable = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra"
testpaths = [
    "tests"
]
asyncio_default_fixture_loop_scope = "function"
